# cpp-stl-algorithms-and-containers

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  build_and_test.yml
data/: sample.txt
examples/: main.cpp
include/: text_processing.h  top_words.h  word_counter.h
src/: text_processing.cpp  top_words.cpp  word_counter.cpp
tests/: word_counter_tests.cpp
